lab1/Test/L1-A-13-61.output
Error Type B at Line 1
Error Type B at Line 3
Error Type A at Line 13
Error Type B at Line 20
Error Type B at Line 22
Error Type A at Line 24
Error Type B at Line 31
Error Type B at Line 35
Error Type B at Line 37
Error Type B at Line 47
Error Type A at Line 52
