lab1/Test/L1-A-13-61.cmm
xbETKPUDdb6qX ( ) {
  struct Qq3P8Hq77w_0p_ FG = UVQM8Dg455akn3bddKl = 
    b || LAIj3J_yWhc_aRz && oQsq_UX >= + kz2epRW9TtnpLUCW 
    * ! - XXz1KEncR7 ( eHQXDThcPTqh , lDDub59 || ul68EzMPA 
    && CgpVzXLX0aWdQazn < ! - ( E36LCsGOmJpVx3lm && zebhmpaxVbBlNbDoHU 
    > AVLUndjZNbpc / ! ! UegntY0sobdXjCvJWY0 ( QCuEsLdqsXewZjSE 
    && ChFChZes6r042JnoWDUo <= A95uWceBC2rmW_L5S9aj - 
    ( Rb5XaVyilgYZ9HiL && vEjMNBtHzjr != t ) + X3UyL ) 
    ) == 979964569 - ! 767484056.1786024677 / - raR8uG 
    ( ) ) [ wZGmSjFdJKLDqOe4V6VE . uK3SfOPi22UkEY ] , 
    QuqyJIsJcwF ;
}
float &mrt69Fe6WFN7rcg , dOlZY_F [ 1630327112 ] 

;
int KPwFk71eZ_nYFbg7K 
;
int tKa_DNXiZHkm ( ) {
  struct QdKftAej Yc7CSgDW8JF9iEhA ;
/ }
struct l8 ;
int oQdnfYTM ( int kev61DGc , int ) {
  if ( U )   while ( uxUXtkSvJ1tVqm )   I ;
@
else {
    struct ASjy1ql6 rl31BD ;
  }
  if ( De ) {
    int nWrlEgvy0Wgrt0JAf0b8 ;
    struct l48 XPKYYr ;
    if ( P3bMvdENf     if ( FldCDkolE )     while 
      ( Xrj8MZ1jQFkm )     wJd8KcS ;

else {
      int float VyCBOtl9qHvRAWd ;
    }
else     while ( LefmsFfyr struct )     return g4rDaGjbOi15IbobhY 
      ;


  }else   if ( _OT786yRVlpofK6 )   W__0aI ;


}
struct pPNK8OwYmNZRMVlFt5 {
  struct uvh6 cpsJEqfvZndz5mC ;
}/ ;
struct {
  int FBBd ;
  int fIP ;
};
\int ;
struct O rDjuwY3gP5j 
;
